# netbox-mcp-server

./: .gitignore  .gitmodules  README-client.md  README.md  mkdocs.yml  netbox_client.py  pyproject.toml  server.py
.github/workflows/: docs.yml
docs/: gen_ref_pages.py  index.md
tests/: conftest.py  test_integration.py  test_netbox_client.py  test_server.py
tests/mocks/: netbox_responses.py
