[project]
name = "netbox-mcp-server"
version = "0.1.0"
description = "MCP Server implementation for NetBox integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=. --cov-report=term-missing"

[project.dependencies]
python = "^3.8"
requests = "^2.31.0"
fastmcp = "^0.1.0"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.1",
    "responses>=0.23.1",
    "aioresponses>=0.7.4",
    "black>=23.7.0",
    "mypy>=1.5.1",
    "ruff>=0.0.284"
]
